Use Stream#toList